# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  GameEngine.sln  README.md  cleanBuildDirectory.bat  genProject.bat  imgui.ini  premake5.lua
Editor/: CMakeLists.txt  imgui.ini  premake5.lua
Editor/ScriptModule/: build.bat  premake5.lua
Editor/ScriptModule/scripts/: TestScript.cpp  TestScript.h
Editor/include/: EditorLayer.h
Editor/include/Panels/: ConsolePanel.h  ContentBrowserPanel.h  DataPanel.h  MenuPanel.h  SceneHierarchyPanel.h  ViewportPanel.h
Editor/include/Theme/: EditorResources.h
Editor/src/: EditorApp.cpp  EditorLayer.cpp
Editor/src/Panels/: ConsolePanel.cpp  ContentBrowserPanel.cpp  DataPanel.cpp  MenuPanel.cpp  SceneHierarchyPanel.cpp  ViewportPanel.cpp
Engine/: CMakeLists.txt  Engine.h  EntryPoint.h  pch.h  premake5.lua
Engine/include/: Engine.h  EntryPoint.h  pch.h
Engine/include/Audio/: Audio.h
Engine/include/Core/: Core.h  EngineApp.h  EngineSettings.h  Input.h  Layer.h  Log.h  PlatformDetection.h  Settings.h  Timer.h  Timestep.h  UUID.h  Utils.h  Window.h
Engine/include/Events/: ApplicationEvents.h  CollisionEvents.h  Event.h  KeyCodes.h  KeyEvents.h  MouseEvents.h
Engine/include/Events/Codes/: KeyCodes.h  MouseCodes.h
Engine/include/ImGui/: Colors.h  ImFileBrowser.h  ImGuiLayer.h  ImGuiStyle.h
Engine/include/Physics/: Debug2DPhysics.h  Physics2D.h
Engine/include/Render/: Buffer.h  Debug2DPhysics.h  Framebuffer.h  GraphicsContext.h  ParticleEmitter.h  Render2D.h  RenderAPI.h  RenderGlobals.h  Shader.h  Texture.h  VertexArray.h
Engine/include/Render/Camera/: Camera.h  EditorCamera.h  GameCamera.h  GlobalCamera.h
Engine/include/Render/Primitives/: Circle.h  Cube.h  Grid.h  Line.h  Primitive.h  Quad.h  Text.h
Engine/include/Render/Text/: Font.h  MSDFData.h
Engine/include/Scene/: Components.h  ECS.h  Entity.h  Scene.h  SceneSerializer.h  Script.h
Engine/include/Scene/Systems/: AudioSystem.h  CameraSystem.h  ParticleSystem.h  PhysicsSystem2D.h  RenderSystem.h  ScriptSystem.h
Engine/include/Scripting/: NativeScripting.h  Script.h
Engine/src/Audio/: Audio.cpp
Engine/src/Core/: EngineApp.cpp  Input.cpp  Layer.cpp  Log.cpp  UUID.cpp  Utils.cpp  Window.cpp
Engine/src/ImGui/: Colors.cpp  ImGuiBuild.cpp  ImGuiLayer.cpp
Engine/src/Physics/: Debug2DPhysics.cpp  Physics2D.cpp
Engine/src/Render/: Buffer.cpp  Debug2DPhysics.cpp  Framebuffer.cpp  GraphicsContext.cpp  ParticleEmitter.cpp  Render2D.cpp  RenderAPI.cpp  RenderGlobals.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
Engine/src/Render/Camera/: Camera.cpp  EditorCamera.cpp  GameCamera.cpp  GlobalCamera.cpp
Engine/src/Render/Primitives/: Circle.cpp  Cube.cpp  Grid.cpp  Line.cpp  Primitive.cpp  Quad.cpp  Text.cpp
Engine/src/Render/Text/: Font.cpp
Engine/src/Scene/: ECS.cpp  Entity.cpp  Scene.cpp  SceneSerializer.cpp
Engine/src/Scene/Systems/: AudioSystem.cpp  CameraSystem.cpp  ParticleSystem.cpp  PhysicsSystem2D.cpp  RenderSystem.cpp  ScriptSystem.cpp
Engine/src/Scripting/: NativeScripting.cpp
Game/: CMakeLists.txt  imgui.ini  premake5.lua  projectSettings.json  projectSettings.lua
Game/Game/: Game.cpp  Game.h  GameApp.cpp
Game/ScriptModule/: build.bat  premake5.lua
Game/ScriptModule/scripts/: Ball.cpp  Ball.h  Player1Controller.cpp  Player1Controller.h  Player2Controller.cpp  Player2Controller.h  TestScript - copia.h  TestScript.cpp  TestScript.h  common.h  dll.cpp
Game/assets/scenes/: SceneDefault.lua
Game/assets/shaders/: Circle.glsl  Quad.glsl  Text.glsl
Game/include/: GameLayer.h  myHeader.h
Game/src/: GameApp.cpp  GameLayer.cpp  main.cpp
GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters
GameEngine/src/: GameEngine.h
GameEngine/src/GameEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Launcher/: ejecuteLauncher.bat  launcher.py  launcherTest.py  projectGallery.json  template_gameApp.py  template_premake5.py  template_projectSettings.py  template_sceneDefault.py
SandBox/: SandBox.vcxproj  SandBox.vcxproj.filters
SandBox/src/: SandboxApp.cpp
assets/scenes/: Scene2.lua  Scene3.lua  SceneDefault.lua
assets/shaders/: Grid.glsl  Line.glsl  ScreenTexture.glsl  Text.glsl
libraries/: README.md
libraries/ImGuizmo/: premake5.lua
libraries/box2d/: Box2D.h  CMakeLists.txt  premake5.lua
libraries/entt/: CMakeLists.txt  premake5.lua
libraries/glfw/: premake5.lua
libraries/imgui/: CMakeLists.txt
libraries/lua/: CMakeLists.txt  premake5.lua
libraries/premake/: premake5.lua
libraries/sol/: CMakeLists.txt  premake5.lua
libraries/sol/sol/: config.hpp  forward.hpp  sol.hpp
libraries/stb_image/src/: stb_image.cpp
libraries/stb_truetype/: CMakeLists.txt
setup/: CleanBuildDirectories.bat  Compile.bat  LaunchEditor_devConvenience.bat  Setup.py  SetupPremake.py  Win-GenProjects.bat
